--- a/front/src/assets/styles/Login.module.css
+++ b/front/src/assets/styles/Login.module.css
@@ -9,3 +9,27 @@
   @media (max-width: 768px) {
   }
 }
+
+.button {
+  padding: 0.2rem;
+  width: 5rem;
+  border-radius: 0.5rem;
+  background-color: #2a9a71;
+  color: white;
+  border: none;
+  cursor: pointer;
+  transition:
+    background-color 0.3s ease,
+    transform 0.3s ease;
+}
+
+.button:hover {
+  background-color: #217154;
+  transform: scale(1.05);
+}
+
+.formPhoneFieldContainer {
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+}
