--- a/admin/src/assets/SystemConfigs.module.css
+++ b/admin/src/assets/SystemConfigs.module.css
@@ -39,3 +39,17 @@
   gap: 1rem;
   border-radius: 0.5rem;
 }
+
+.color {
+  flex-basis: 20%;
+  padding: 0 2px;
+  margin-left: 5px;
+  margin-right: 2px;
+}
+
+.colorLabel {
+  display: block;
+  font-size: 0.8rem;
+  width: max-content;
+  padding: 10px 1px;
+}
