--- a/admin/src/assets/global.css
+++ b/admin/src/assets/global.css
@@ -36,6 +36,125 @@ body {
 #header_last {
   direction: ltr;
 }
+
+.gpt-button-wrap {
+  width: 100%;
+  position: relative;
+}
+
+.gpt-button {
+  left: 0 !important;
+  top: 0 !important;
+  position: absolute !important;
+  width: 25px;
+  height: 25px;
+  overflow: hidden;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+.gpt-button-wrap-fab {
+  width: 100%;
+  position: relative;
+}
+
+.gpt-button-wrap-fab .gpt-button-fab:hover,
+.gpt-button-wrap-fab .gpt-button-fab:active {
+  background-color: #1e9bff;
+  border-color: #1e9bff;
+  color: #27282c;
+  box-shadow: 0 0 35px #1e9bff;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+}
+
+.gpt-button-wrap-fab .gpt-button-fab {
+  left: 0 !important;
+  top: 0 !important;
+  position: absolute !important;
+  text-align: center;
+  border-color: #1e9bff;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+}
+.tooltip {
+  left: 0 !important;
+  top: 0 !important;
+  position: absolute !important;
+  top: -70px;
+  background: #fff;
+  font-size: 20px;
+  padding: 10px 18px;
+  border-radius: 25px;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+  pointer-events: none;
+  opacity: 0;
+  transition: all 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+.tooltip:before {
+  position: absolute;
+  content: '';
+  height: 15px;
+  width: 15px;
+  background: #fff;
+  bottom: -8px;
+  left: 50%;
+  transform: translateX(-50%) rotate(45deg);
+}
+.gpt-btn-circular {
+  left: 0 !important;
+  top: 0 !important;
+  position: absolute !important;
+  width: 15px;
+  height: 15px;
+}
+
+.gpt-button:hover {
+  width: 200px;
+  height: 35px;
+  transition-delay: 0.2s;
+}
+
+.gpt-button::before {
+  content: '';
+  width: 12px;
+  height: 12px;
+  position: absolute;
+  right: 25px;
+  border-top: 3px solid #1e9bff;
+  border-right: 3px solid #1e9bff;
+  transform: rotate(45deg);
+}
+.gpt-button:hover::before {
+  transform: rotate(45deg);
+}
+.gpt-button::after {
+  content: '';
+  left: -50px;
+  width: 12px;
+  height: 12px;
+  position: absolute;
+  border-top: 3px solid #1e9bff;
+  border-right: 3px solid #1e9bff;
+  transform: rotate(45deg);
+}
+.gpt-button:hover::after {
+  transform: rotate(45deg);
+  transition-delay: 1s;
+}
+
+.gpt-button span {
+  visibility: hidden;
+  opacity: 0;
+  white-space: nowrap;
+  transition: 0.5s;
+}
+.gpt-button:hover span {
+  visibility: visible;
+  opacity: 1;
+  transition-delay: 0.5s;
+}
+
 .grid-box {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
