--- a/front/src/assets/styles/global.css
+++ b/front/src/assets/styles/global.css
@@ -5,49 +5,49 @@
   font-weight: 400;
   src: url(fonts/flUhRq6tzZclQEJ-Vdg-IuiaDsNcIhQ8tQ.woff2) format('woff2');
 }
-.country-code{
+.country-code {
   width: 73px;
   min-width: 73px;
 }
-.captcha-area{
+.captcha-area {
   display: flex;
 }
-.captcha-wrapper{
+.captcha-wrapper {
   background-color: #eee;
   border-radius: 5px;
   padding: 15px;
 }
-.captcha-wrapper label{
+.captcha-wrapper label {
   font-size: 13px;
   font-weight: bold;
   margin-bottom: 5px;
 }
-.width-100{
-  width:100%;
+.width-100 {
+  width: 100%;
 }
-.login-container{
-  width:290px;
+.login-container {
+  width: 290px;
   max-width: 100%;
   margin: auto;
 }
-.signup-wrapper{
+.signup-wrapper {
   max-width: 300px;
 }
-.signup-field{
+.signup-field {
   width: 100%;
 }
-.captcha-image{
+.captcha-image {
   width: 110px;
   min-width: 110px;
 }
-.captcha-input{
+.captcha-input {
   width: calc(100% - 110px) !important;
   padding-left: 10px;
 }
-.captcha-input input{
+.captcha-input input {
   height: 35px;
 }
-.phone-input{
+.phone-input {
   width: calc(100% - 73px) !important;
 }
 /* ChatContentStyle */
@@ -56,7 +56,7 @@
   animation-duration: 0.4s;
   animation-fill-mode: both;
 }
-.login-wrapper{
+.login-wrapper {
   padding: 15px;
 }
 .inside-pop-up-bg {
@@ -763,6 +763,14 @@ body {
 .ttl {
   font-size: 18px;
   line-height: 30px;
+}
+.attl-11 {
+  font-size: 18px;
+  line-height: 30px;
+  border: 1px solid gray;
+  border-radius: 40px;
+  box-shadow: inset 0 0 20px #000000;
+  padding-left: 12px;
 }
 
 .card-add .ttl {
@@ -2917,6 +2925,11 @@ input[type='number'] {
 
 .gfdsdf {
   display: inline;
+}
+
+.img-final {
+  width: 50px;
+  height: 50px;
 }
 
 .the-order-status .gfdsdf,
